--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -131,7 +131,7 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html"><b>04.04. Filtraggio dell'Aria</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html"><b>04.05. Formula di Sabine con Filtraggio dell'Aria</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori.html"><b>04.07. Norma ISO 3382 e alcuni Descrittori</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html"><b>04.07. Norma ISO 3382 e alcuni Descrittori Statistici</b></a></li>
               </p>
         </div>
       </div>
