--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -180,6 +180,24 @@
     </div>
   </section>
 
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h3>T10, T20, T30</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Altri parametri simili all'RT60, ovvero 3 pendenze e profili di decadimento diversi che hanno lo scopo di caratterizzare la risposta all'impulso in momenti diversi.
+            Ciò perchè una risposta all'impulso uniforme dovrebbe avere T10, T20 e T30 uguali, mentre nella realtà i parametri differsicono fra loro, e quanto differeiscono e quali sono i loro valori danno idea della omogeneità della IR.
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
     <div class="container-fluid">
