--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -222,7 +222,7 @@
           <h3>EDT</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>Early deacy time</b>, ovvero tempo di riferimento delle prime riflessioni.
+            <b>Early decay time</b>, ovvero tempo di riferimento delle prime riflessioni.
             <br>
             <br>
             Si calcola tracciando una retta a -10dB fino a quando incontra la curva della risposta all'impulso, ottengo dunque:
