--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -111,6 +111,13 @@
             <br>
             <br>
             Queste grandezze ci aiutano a capire la fruibilità di uno spazio acustico.
+            <br>
+            <br>
+          </p>
+          <h3>ITDG</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Initial time delay gap, tempo di ritardo della prima riflessione, ovvero il tempo che intercorre tra il suono diretto e la prima riflessione. Ammesso ovviamente che ci sia un suono diretto.
           </p>
         </div>
       </div>
