--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -118,6 +118,13 @@
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
             Initial time delay gap, tempo di ritardo della prima riflessione, ovvero il tempo che intercorre tra il suono diretto e la prima riflessione. Ammesso ovviamente che ci sia un suono diretto.
+            <br>
+            <br>
+          </p>
+          <h3>Haas effect</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Se i contribuiti al suono diretto arrivano entro i 35 ms, dunque l'ITDG è uguale o minore a questo valore, tutti i contenuti vengono integrati come facente parti del suono diretto. Questi eventi vengono inglobati come lo stesso evento sonoro.
           </p>
         </div>
       </div>
