--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -117,14 +117,20 @@
           <h3>ITDG</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            Initial time delay gap, tempo di ritardo della prima riflessione, ovvero il tempo che intercorre tra il suono diretto e la prima riflessione. Ammesso ovviamente che ci sia un suono diretto.
+            <b>Initial time delay gap</b>, tempo di ritardo della prima riflessione, ovvero il tempo che intercorre tra il suono diretto e la prima riflessione. Ammesso ovviamente che ci sia un suono diretto.
             <br>
             <br>
           </p>
           <h3>Haas effect</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            Se i contribuiti al suono diretto arrivano entro i 35 ms, dunque l'ITDG è uguale o minore a questo valore, tutti i contenuti vengono integrati come facente parti del suono diretto. Questi eventi vengono inglobati come lo stesso evento sonoro.
+            Se i contribuiti al suono diretto arrivano entro i 35 ms, dunque l'ITDG è uguale o minore a questo valore, tutti i contenuti vengono integrati come facente parti del suono diretto. Questi eventi vengono inglobati come lo stesso evento
+            sonoro. Se i contribuiti arrivano dopo un intervallo di circa 80 ms, si rompe l'uniformità di un suono e sentiamo l'eco.
+            <br>
+            <br>
+            Questa grandezza è molto importante, perchè è uno di quei parametri chiamato intimacy. Al di sopra di un certo valore avremo la sensazione di un ambiente piú grande.
+            Dal punto di vista qualitativo, è importante che le prime riflessioni arrivino dalle pareti laterali per avere una gradevolezza maggiore dello spazio.
+            Essa viene chiama <b>asimmetria laterale</b> o <b>coerenza interaurale</b>.
           </p>
         </div>
       </div>
