--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -120,6 +120,7 @@
             <b>Initial time delay gap</b>, tempo di ritardo della prima riflessione, ovvero il tempo che intercorre tra il suono diretto e la prima riflessione. Ammesso ovviamente che ci sia un suono diretto.
             <br>
             <br>
+            I valori ottimali per l'ITDG variano a seconda dello spazio. Di solito per il parlato si preferisce un ITDG minore di 50ms. Valore magico per l'ITDG è intorno a 30 ms.
           </p>
           <h3>Haas effect</h3>
           <br>
