--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -121,6 +121,8 @@
             <br>
             <br>
             I valori ottimali per l'ITDG variano a seconda dello spazio. Di solito per il parlato si preferisce un ITDG minore di 50ms. Valore magico per l'ITDG è intorno a 30 ms.
+            <br>
+            <br>
           </p>
           <h3>Haas effect</h3>
           <br>
@@ -132,6 +134,15 @@
             Questa grandezza è molto importante, perchè è uno di quei parametri chiamato intimacy. Al di sopra di un certo valore avremo la sensazione di un ambiente piú grande.
             Dal punto di vista qualitativo, è importante che le prime riflessioni arrivino dalle pareti laterali per avere una gradevolezza maggiore dello spazio.
             Essa viene chiama <b>asimmetria laterale</b> o <b>coerenza interaurale</b>.
+            <br>
+            <br>
+          </p>
+          <h3>BR - Bass Ratio</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Esprime un rapporto tra tempi di riverbero presi a delle precise frequenze. Questo valore ci da indicazioni della pienezza del suono nel registro medio-grave. Tipicamente le sale migliori sono quelle che hanno il BR tra 1.2 e 1.25.
+            <br>
+            <br>
           </p>
         </div>
       </div>
