--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -144,6 +144,19 @@
             <br>
             <br>
           </p>
+          <h3>Brilliance</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Ha una definizione simile alla BR ma su frequenze diverse.
+
+            Brilliance e Bass Ratio descrivono la luminosità dell'ambiente a livello acustico, ovvero quanta parte c'è di contributo medio-grave e medio-acuto.
+            Questi due parametri ovviamente sono collegati ai materiali dello spazio.
+            Materiali molto lisci e rigidi aumentano i parametri di Brilliance, mentre il legno da contributo al BR.
+            Il legno ha la capicità di preservare la regione medio-grave dello spettro (a seconda dell'essenza e della finitura del legno cambia molto per le qualità di risuonatore).
+            Questi due parametri vengono valutati per lavori di adattamento acustico.
+            <br>
+            <br>
+          </p>
         </div>
       </div>
     </div>
