--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -144,11 +144,19 @@
             <br>
             <br>
           </p>
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>BR = RT(125Hz) + RT(250Hz) / RT(500Hz) + RT(1kHz)</b></h3><br>
+            <br>
+          </p>
           <h3>Brilliance</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
             Ha una definizione simile alla BR ma su frequenze diverse.
-
+            <br>
+            <br>
+          </p>
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>Brilliance = RT(500Hz) + RT(1kHz) / RT(2kHz) + RT(4kHz)</b></h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
             Brilliance e Bass Ratio descrivono la luminosità dell'ambiente a livello acustico, ovvero quanta parte c'è di contributo medio-grave e medio-acuto.
             Questi due parametri ovviamente sono collegati ai materiali dello spazio.
             Materiali molto lisci e rigidi aumentano i parametri di Brilliance, mentre il legno da contributo al BR.
