--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -132,6 +132,7 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html"><b>04.05. Formula di Sabine con Filtraggio dell'Aria</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html"><b>04.07. Norma ISO 3382 e alcuni Descrittori Statistici</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>04.08. Descrittori Statistici Relativi all'Energia</b></a></li>
               </p>
         </div>
       </div>
