--- a/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html
@@ -178,7 +178,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
