--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Entriamo ora in una famiglia di parametri che danno informazioni di carattere energetico, utili soprattutto per determinare l'intellegibilità del segnale(per il parlato e per la musica).
+            Entriamo ora in una famiglia di parametri che danno informazioni di carattere energetico, utili soprattutto per determinare l'intellegibilità del segnale, sia per il parlato che per la musica).
             Energia è relativa al quadrato della pressione. Se faccio il quadrato e la somma di tutti gli impulsi ottengo la Etotale.
           </p>
         </div>
