--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -106,6 +106,9 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Entriamo ora in una famiglia di parametri che danno informazioni di carattere energetico, utili soprattutto per determinare l'intellegibilità del segnale, sia per il parlato che per la musica).
             Energia è relativa al quadrato della pressione. Se faccio il quadrato e la somma di tutti gli impulsi ottengo la Etotale.
+            <br>
+            <br>
+            Se voglio valutare l'intellegibilità del segnale, è importante capire quanta parte del segnale è contenuta nella prima parte dell'IR rispetto al totale dell'energia.
           </p>
         </div>
       </div>
