--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -109,6 +109,13 @@
             <br>
             <br>
             Se voglio valutare l'intellegibilità del segnale, è importante capire quanta parte del segnale è contenuta nella prima parte dell'IR rispetto al totale dell'energia.
+            <br>
+            <br>
+          </p>
+          <h3>D50 (Definition)</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Rapporto fra energia utile ed energia totale. L'energia utile in questo caso va dagli 0 ai 50 ms, mentre l'nergia totale va da 0 a infinito.
           </p>
         </div>
       </div>
