--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -116,6 +116,18 @@
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
             Rapporto fra energia utile ed energia totale. L'energia utile in questo caso va dagli 0 ai 50 ms, mentre l'nergia totale va da 0 a infinito.
+            Nel caso del parlato il D50 deve essere maggiore di 0.5. Nei primi 50ms ci deve essere almeno metà dell'energia totale perchè il parlato sia intellegibile.
+            <br>
+            <br>
+            Altri indici di chiarezza definiti Clarity, sono il C50 e C80.
+            <br>
+            <br>
+          </p>
+          <h3>C50/C80 (Clarity)</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Essi sono definiti come il rapporto tra energia utile ed energia dannosa.
+            Ora le misure sono logaritmiche e si calcolano come:
           </p>
         </div>
       </div>
