--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -128,6 +128,40 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Essi sono definiti come il rapporto tra energia utile ed energia dannosa.
             Ora le misure sono logaritmiche e si calcolano come:
+
+            In cui al numeratore abbiamo l'energia utile ed al denominatore abbiamo l'energia dannosa dagli 50/80 ms fino ad infinito.
+            Essi sono usati per l'intellegibilità del parlato(C50) e della musica(C80).
+            Il C50 ha bisongo che tutte le articolazioni siano percepibili. Per la musica va bene il C80 poi le articolazioni sono più lente del parlato.
+            Il livello di intellegibilità può essere anche piú basso rispetto al parlato.
+            <br>
+            <br>
+            Valori ottimali per il C50 e il C80:
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">C50</th>
+                <th scope="col"></th>
+                <th scope="col">C80</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>< 0dB</td>
+                <td>non idoneo</td>
+                <td>< -4dB</td>
+              </tr>
+              <tr>
+                <td>0dB < C50 < 3dB</td>
+                <td>discreto</td>
+                <td>0 < C80 < 2dB</td>
+              </tr>
+              <tr>
+                <td>3dB</td>
+                <td>idoneo</td>
+                <td>> 2dB</td>
+              </tr>
+            </tbody>
+          </table>
           </p>
         </div>
       </div>
