--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -136,6 +136,7 @@
             <br>
             <br>
             Valori ottimali per il C50 e il C80:
+          </p>
           <table class="table">
             <thead>
               <tr>
@@ -146,9 +147,11 @@
             </thead>
             <tbody>
               <tr>
-                <td>< 0dB</td>
+                <td>
+                  < 0dB</td>
                 <td>non idoneo</td>
-                <td>< -4dB</td>
+                <td>
+                  < -4dB</td>
               </tr>
               <tr>
                 <td>0dB < C50 < 3dB</td>
@@ -162,6 +165,29 @@
               </tr>
             </tbody>
           </table>
+          <br>
+          <br>
+          <h3>Spatial Impression</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            La spatial impression è una delle caratteristiche piú importanti valutate.
+            <br>
+            <br>
+            Per avere una sensazione di spazialità corretta le ITDG non devono superare gli 80 ms e devono arrivare all'ascoltatore da direzioni laterali, perchè questa cosa aumenta la percezione di asimmetria dello spazio.
+            I rapporti di intensità tra prime riflessioni e suono diretta devono rispettare le leggi dell'effetto precedenza(effetto Haas).
+            <br>
+            <br>
+            Dal punto di vista frequenziale, le bande di frequenza più importante per l'impressione spaziale sono quelle con banda di ottava ai 125 Hz(suono caldo) e della parte a 1000 Hz(banda di apertura), essa contribuisce a dare una presenza
+            spaziale del suono, fronte di presenza piú alto.
+            Mentre la banda dei 125 Hz contribuisce a creare un suono avvolgente, la banda intorno ai 1000 Hz è legata alla sensazione di apertura del suono. L'impressione della spazialità è legata molto a coerenza interaurale. Una bassa coerenza
+            interaurale da un piú largo ambiente spaziale. Spazio asimetterico = bassa coerenza interaurale.
+            <br>
+            <br>
+            Una simmetria dal punto di vista spaziale ci piace, ma dal punto di vista acustico non ci piace molto.
+            Piú sono diversi i segnali che arrivano alle due orecchie piú ci sembra di essere in uno spazio aperto.
+            <br>
+            <br>
+            Ci sono diversi parametri per la coerenza del segnale tra due orecchie, tra cui la ITACC ovvero inter aural cross correlation. Tutti questi parametri vengono in genere registrati con delle Dummy-Head.
           </p>
         </div>
       </div>
