--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -113,7 +113,31 @@
             <br>
           </p>
           <h3>D50 (Definition)</h3>
-          <br>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/24_d50.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Rapporto fra energia utile ed energia totale. L'energia utile in questo caso va dagli 0 ai 50 ms, mentre l'nergia totale va da 0 a infinito.
             Nel caso del parlato il D50 deve essere maggiore di 0.5. Nei primi 50ms ci deve essere almeno metà dell'energia totale perchè il parlato sia intellegibile.
@@ -128,7 +152,32 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Essi sono definiti come il rapporto tra energia utile ed energia dannosa.
             Ora le misure sono logaritmiche e si calcolano come:
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/25_c50_80.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
             In cui al numeratore abbiamo l'energia utile ed al denominatore abbiamo l'energia dannosa dagli 50/80 ms fino ad infinito.
             Essi sono usati per l'intellegibilità del parlato(C50) e della musica(C80).
             Il C50 ha bisongo che tutte le articolazioni siano percepibili. Per la musica va bene il C80 poi le articolazioni sono più lente del parlato.
