--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -290,8 +290,9 @@
             <oi>
               Secondo criterio è legato alla misura dell'energia, ovvero l'energia che arriva dalla sorgente amplificata in rapporto dall'energia che arriva senza amplificazione a 10 metri di distanza (misuro energia che mi arriva da apparato di
               amplificazione, e energia senza amplificazione a 10m e svolgo il calcolo per trovare la G).
-              Vi sono degli altri parametri che vengono utilizzati in base a necessità e a ció che devo realizzare.
-              </p>
+              Vi sono degli altri parametri che vengono utilizzati in base a necessità e a ció che devo realizzare.</oi>
+          </ul>
+          </p>
         </div>
       </div>
     </div>
