--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -290,7 +290,20 @@
             <ol>
               Secondo criterio è legato alla misura dell'energia, ovvero l'energia che arriva dalla sorgente amplificata in rapporto dall'energia che arriva senza amplificazione a 10 metri di distanza (misuro energia che mi arriva da apparato di
               amplificazione, e energia senza amplificazione a 10m e svolgo il calcolo per trovare la G).
-              Vi sono degli altri parametri che vengono utilizzati in base a necessità e a ció che devo realizzare.</ol>
+              Vi sono degli altri parametri che vengono utilizzati in base a necessità e a ció che devo realizzare.
+              <br>
+              <br>
+              <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>G = 10log (E<sub>a</sub>/E<sub>s(10m)</sub>)</b></h3>
+            <br>
+              <br>
+              <br>
+              L'indice G con sala vuota tra 500Hz e 1Khz
+              <br>
+              <br>
+              G >= -4dB per sale destinate alla musica
+              <br>
+              G >= +4dB per sale destinate al parlato (intellegibilità)
+            </ol>
           </ul>
           </p>
         </div>
