--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -282,19 +282,19 @@
             <br>
             Ci sono delle normative che definiscono delle sorgenti standard per poter confrontare i diversi ambienti.
             Ci sono diversi modi di definire questo rinforzo acustico, c'è ad esempio una norma che definisce due possibili criteri di misura di questo indice di rinforzo acustico:
-          <ul>
-            <ol>
+          <ol>
+            <li>
               Primo criterio è il rumore di fondo, che puó dipendere da tante cose, come l'isolamento dello spazio dall'ambiente esterno, rumore da impianto circolazione aria, ed a sala piena il rumore dipende da fattori come la sollecitazione
               delle strutture, e dunque per valutare i criteri di fruizione percettiva della sala, andrebbe fatta un'analisi del rumore di fondo, che è un aspetto importante.
-              In una sala grande, il rumore di fondo puó arrivare anche a 40-50dB.</ol>
-            <ol>
+              In una sala grande, il rumore di fondo puó arrivare anche a 40-50dB.</li>
+            <li>
               Secondo criterio è legato alla misura dell'energia, ovvero l'energia che arriva dalla sorgente amplificata in rapporto dall'energia che arriva senza amplificazione a 10 metri di distanza (misuro energia che mi arriva da apparato di
               amplificazione, e energia senza amplificazione a 10m e svolgo il calcolo per trovare la G).
               Vi sono degli altri parametri che vengono utilizzati in base a necessità e a ció che devo realizzare.
               <br>
               <br>
               <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>G = 10log (E<sub>a</sub>/E<sub>s(10m)</sub>)</b></h3>
-            <br>
+              <br>
               <br>
               <br>
               L'indice G con sala vuota tra 500Hz e 1Khz
@@ -303,7 +303,8 @@
               G >= -4dB per sale destinate alla musica
               <br>
               G >= +4dB per sale destinate al parlato (intellegibilità)
-            </ol>
+            </li>
+          </ol>
           </ul>
           </p>
         </div>
