--- a/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html
@@ -283,12 +283,11 @@
             Ci sono delle normative che definiscono delle sorgenti standard per poter confrontare i diversi ambienti.
             Ci sono diversi modi di definire questo rinforzo acustico, c'è ad esempio una norma che definisce due possibili criteri di misura di questo indice di rinforzo acustico:
           <ol>
-            <li>
-              Primo criterio è il rumore di fondo, che puó dipendere da tante cose, come l'isolamento dello spazio dall'ambiente esterno, rumore da impianto circolazione aria, ed a sala piena il rumore dipende da fattori come la sollecitazione
+            <li>Primo criterio è il rumore di fondo, che puó dipendere da tante cose, come l'isolamento dello spazio dall'ambiente esterno, rumore da impianto circolazione aria, ed a sala piena il rumore dipende da fattori come la sollecitazione
               delle strutture, e dunque per valutare i criteri di fruizione percettiva della sala, andrebbe fatta un'analisi del rumore di fondo, che è un aspetto importante.
-              In una sala grande, il rumore di fondo puó arrivare anche a 40-50dB.</li>
-            <li>
-              Secondo criterio è legato alla misura dell'energia, ovvero l'energia che arriva dalla sorgente amplificata in rapporto dall'energia che arriva senza amplificazione a 10 metri di distanza (misuro energia che mi arriva da apparato di
+              In una sala grande, il rumore di fondo puó arrivare anche a 40-50dB.
+            </li>
+            <li>Secondo criterio è legato alla misura dell'energia, ovvero l'energia che arriva dalla sorgente amplificata in rapporto dall'energia che arriva senza amplificazione a 10 metri di distanza (misuro energia che mi arriva da apparato di
               amplificazione, e energia senza amplificazione a 10m e svolgo il calcolo per trovare la G).
               Vi sono degli altri parametri che vengono utilizzati in base a necessità e a ció che devo realizzare.
               <br>
