--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -133,6 +133,8 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html"><b>04.07. Norma ISO 3382 e alcuni Descrittori Statistici</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>04.08. Descrittori Statistici Relativi all'Energia</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html"><b>04.09. Meccanismi Percettivi dello Spazio e della Sorgente</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_10_meccanismi_percetttivi_della_distanza.html"><b>04.10. Meccanismi Percettivi della Distanza</b></a></li>
               </p>
         </div>
       </div>
