--- a/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
@@ -109,6 +109,18 @@
             pattern cerebrali (mappe cerebrali, ovvero dei pattern di attivazione neurale spazio-tempo varianti, come dei lampi nei temporali che cambiano nel tempo), ognuno di essi corrisponde a condizioni di percezione. Il nostro cervello è
             un'oggetto complesso con immensa capacità di riconoscere pattern che è organizzato e immagazzinato nella nostra memoria. E riconosce ed individua un certo tipo di informazione.
             In alcune condizioni alcuni meccanismi sono piú o meno utili, ma il cervello elabora i dati da piú luoghi sensoriali.
+            <br>
+            <br>
+          </p>
+          <h3>Meccanismi di lateralizzazione</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Riconoscimento dell'angolo della sorgente sul piano azimuthale(orizzontale), usando un riferimento polare a 3 dimensioni con:
+          <ol>
+            <li>un parametro per la distanza (modulo del vettore)</li>
+            <li>azimuth -> altezza</li>
+            <li>zenith -> inclinazione</li>
+          </ol>
           </p>
         </div>
       </div>
