--- a/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
@@ -121,6 +121,42 @@
             <li>azimuth -> altezza</li>
             <li>zenith -> inclinazione</li>
           </ol>
+          <br>
+          <br>
+          </p>
+          <h3>ITD</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            <b>Interaural time difference</b> è la differenza di tempo di arrivo del segnale alle due orecchie. La valutazione della differenza di tempo di arrivo non è banale per tutti i tipi di sorgente perchè i gangli fanno una misura di correlazione tra
+            i segnali che arrivano alle due orecchie in un tot. di tempo. Se il tempo è al di sotto di un certo valore il sitema percettivo non riesce a stargli dietro e la misura di valutazione è poco significativa.
+            <br>
+            <br>
+            Al di sotto degli 800 Hz e sopra gli 80 Hz viene valutata la differenza di fase, sopra gli 800 Hz il nostro orecchio non è in grado di fare questa distinzione e viene dunque valutato il ritardo di gruppo, ovvero la differenza di arrivo
+            dell'inviluppo dei due segnali alle due orecchie.
+            <br>
+            <br>
+            Ciò è importante nella percezione dello spazio, poichè le riflessioni dello spazio arrivano come degli impulsi e proprio su ciò viene valutata la differenza dei ritardi di arrivo alle due orecchie.
+            <br>
+            <br>
+          </p>
+          <h3>IID (ILD)</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            <b>Interaural intensity difference</b> o <b>Interaural intensity difference</b> anche qui vi è una differenza di livello tra i segnali che arrivano alle due orecchie. Ma da cosa può dipendere la differenza di livello che arriva alle due orecchie? Cosa
+            puó portare a una differenza di livello percepito dalle due orecchie? La presenza della testa ad esempio non vale per tutto lo spettro ma c'è la diffrazione e dunque alcune frequenze che hanno piú difficoltà ad attraversa ostacoli ovvero
+            le lunghezze d'onda confrontabili con la testa non oltrepasseranno la stessa, la testa realizzerà un ostacolo. Le frequenze basse hanno una lunghezza d'onda e quindi la capacità di aggirare la testa mentre le frequenze piú alte non
+            riescono ad aggirarla.
+            <br>
+            <br>
+            L'ILD dove funziona bene e dove non funziona?
+            Quando le lunghezze d'onda sono piú grandi delle dimensioni medie della testa il campo aggira la testa con stesso livello su orecchio destro e sinistro, man mano che si sale in frequenza la testa diviene sempre piú visibile.
+            <br>
+            <br>
+            Campo come una persona che cammina che vede o non vede ostacoli, se l'ostacolo non è confrontabile, allora esso non tocca ne ostacola il passaggio della persona.
+            Se l'ostacolo appare, la testa inizia a fare ombra, allora l'intensità sulle due orecchie è diversa(parlando sempre ovviamente di sorgenti fuori asse).
+            <br>
+            <br>
+            Dimensioni medie della testa 21,5 cm , se la confrontiamo con la formula f=c/lambda -> dunque f funziona bene su frequenze superiori ai 1600 Hz.
           </p>
         </div>
       </div>
