--- a/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
@@ -157,7 +157,10 @@
             <br>
             <br>
             Dimensioni medie della testa 21,5 cm , se la confrontiamo con la formula f=c/lambda -> dunque f funziona bene su frequenze superiori ai 1600 Hz.
+            <br>
+            <br>
           </p>
+          <h3>Cono di Confusione</h3>
         </div>
       </div>
     </div>
