--- a/pages/learn/acustica_degli_spazi_musicali/04_10_meccanismi_percetttivi_della_distanza.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_10_meccanismi_percetttivi_della_distanza.html
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
